back/yourjs/k8s/yourjs-back-deployment.yaml
#yourjs-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yourjs-back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yourjs-back
  template:
    metadata:
      labels:
        app: yourjs-back
    spec:
      containers:
        - name: yourjs-back
          image: pudingles94/project:yourjs-back
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      imagePullSecrets:
        - name: my-secret
